fix overflow from nav blocking content on all pages

--- a/app/assets/stylesheets/z-pure-mods.scss.css
+++ b/app/assets/stylesheets/z-pure-mods.scss.css
@@ -15,11 +15,13 @@
   height: 150px;
 }
 
-.sub-nav-padding {
-  padding: 25px 0;
-  margin: 0;
+.fixed {
+  height: 50px;
 }
 
+.container {
+  margin-top: 5px;
+}
 
 
 
